// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults renders a list of results including vehicles and ghosts 1`] = `
<div
  className="c-search-results"
>
  <ul
    className="c-search-results__list"
  >
    <li>
      <div
        aria-current={false}
        aria-labelledby="card-label-:r0:"
        className="c-card c-card--white c-search-results__result c-card--inactive"
      >
        <button
          className="c-card__left"
          onClick={[Function]}
        >
          <div
            className="c-card__icon"
          >
            <div>
              <svg
                role="img"
                style={
                  {
                    "height": 64,
                    "width": 64,
                  }
                }
                viewBox="-32 -20 64 64"
              >
                <title>
                  Vehicle Status Icon
                </title>
                <g
                  className="c-vehicle-icon c-vehicle-icon--large ghost early-red"
                >
                  <rect
                    className="c-vehicle-icon__label-background"
                    height={24}
                    rx={12}
                    ry={12}
                    width={64}
                    x={-32}
                    y={19}
                  />
                  <text
                    className="c-vehicle-icon__label c-vehicle-icon__label--normal"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="0"
                    y={31}
                  >
                    0123
                  </text>
                  <g
                    transform="scale(0.7) translate(-24,-23)"
                  >
                    <path
                      className="c-vehicle-icon__ghost-highlight"
                      d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                      strokeLinejoin="round"
                    />
                    <path
                      className="c-vehicle-icon__ghost-body"
                      d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                      strokeLinejoin="round"
                    />
                  </g>
                  <text
                    className="c-vehicle-icon__variant"
                    dominantBaseline="alphabetic"
                    textAnchor="middle"
                    x={0}
                    y={8}
                  >
                    X
                  </text>
                </g>
              </svg>
            </div>
          </div>
          <div
            className="c-card__left-content"
          >
            <div
              className="c-card__top-row"
            >
              <div
                className="c-card__title"
                id="card-label-:r0:"
              >
                <output
                  aria-label="Route Variant Name"
                  className="c-route-variant-name"
                >
                  <output
                    aria-label="Route & Variant"
                    className="c-route-variant-name__route-id"
                  >
                    39_X
                  </output>
                  <span>
                     
                  </span>
                  <output
                    aria-label="Headsign"
                    className="c-route-variant-name__headsign"
                  >
                    headsign
                  </output>
                </output>
              </div>
            </div>
            <div
              className="c-card__contents"
            >
              <div
                className="c-properties-list"
              >
                <table
                  className="c-properties-list__table"
                >
                  <tbody>
                    <tr
                      className="c-properties-list__property "
                    >
                      <td
                        className="c-properties-list__property-label"
                      >
                        Run
                      </td>
                      <td
                        className="c-properties-list__property-value"
                      >
                        123-0123
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </button>
      </div>
    </li>
    <li>
      <div
        aria-current={false}
        aria-labelledby="card-label-:r1:"
        className="c-card c-card--white c-search-results__result c-card--inactive"
      >
        <button
          className="c-card__left"
          onClick={[Function]}
        >
          <div
            className="c-card__icon"
          >
            <div>
              <svg
                role="img"
                style={
                  {
                    "height": 64,
                    "width": 64,
                  }
                }
                viewBox="-32 -20 64 64"
              >
                <title>
                  Vehicle Status Icon
                </title>
                <g
                  className="c-vehicle-icon c-vehicle-icon--large on-time early-red"
                >
                  <rect
                    className="c-vehicle-icon__label-background"
                    height={24}
                    rx={12}
                    ry={12}
                    width={64}
                    x={-32}
                    y={19}
                  />
                  <text
                    className="c-vehicle-icon__label c-vehicle-icon__label--normal"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="0"
                    y={31}
                  >
                    1
                  </text>
                  <path
                    className="c-vehicle-icon__triangle"
                    d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
                    data-testid="vehicle-triangle"
                    transform="scale(1) rotate(0) translate(-24,-22)"
                  />
                  <text
                    className="c-vehicle-icon__variant"
                    dominantBaseline="alphabetic"
                    textAnchor="middle"
                    x={0}
                    y={14}
                  >
                    X
                  </text>
                </g>
              </svg>
            </div>
          </div>
          <div
            className="c-card__left-content"
          >
            <div
              className="c-card__top-row"
            >
              <div
                className="c-card__title"
                id="card-label-:r1:"
              >
                <output
                  aria-label="Route Variant Name"
                  className="c-route-variant-name"
                >
                  <output
                    aria-label="Route & Variant"
                    className="c-route-variant-name__route-id"
                  >
                    39_X
                  </output>
                  <span>
                     
                  </span>
                  <output
                    aria-label="Headsign"
                    className="c-route-variant-name__headsign"
                  >
                    Forest Hills
                  </output>
                </output>
              </div>
            </div>
            <div
              className="c-card__contents"
            >
              <div
                className="c-properties-list"
              >
                <table
                  className="c-properties-list__table"
                >
                  <tbody>
                    <tr
                      className="c-properties-list__property "
                    >
                      <td
                        className="c-properties-list__property-label"
                      >
                        Run
                      </td>
                      <td
                        className="c-properties-list__property-value"
                      >
                        run-1
                      </td>
                    </tr>
                    <tr
                      className="c-properties-list__property "
                    >
                      <td
                        className="c-properties-list__property-label"
                      >
                        Vehicle
                      </td>
                      <td
                        className="c-properties-list__property-value"
                      >
                        v1-label
                      </td>
                    </tr>
                    <tr
                      className="c-properties-list__property c-properties-list__property--operator fs-mask"
                    >
                      <td
                        className="c-properties-list__property-label"
                      >
                        Operator
                      </td>
                      <td
                        className="c-properties-list__property-value"
                      >
                        SMITH #op1
                      </td>
                    </tr>
                    <tr
                      className="c-properties-list__property c-properties-list__property--last-login"
                    >
                      <td
                        className="c-properties-list__property-label"
                      >
                        Last Login
                      </td>
                      <td
                        className="c-properties-list__property-value"
                      >
                        4 hr 3 min; 1:38 PM
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`SearchResults renders a selected result card 1`] = `
<div
  className="c-search-results"
>
  <ul
    className="c-search-results__list"
  >
    <li>
      <div
        aria-current={false}
        aria-labelledby="card-label-:r5:"
        className="c-card c-card--white c-search-results__result c-card--inactive"
      >
        <button
          className="c-card__left"
          onClick={[Function]}
        >
          <div
            className="c-card__icon"
          >
            <div>
              <svg
                role="img"
                style={
                  {
                    "height": 64,
                    "width": 64,
                  }
                }
                viewBox="-32 -20 64 64"
              >
                <title>
                  Vehicle Status Icon
                </title>
                <g
                  className="c-vehicle-icon c-vehicle-icon--large ghost early-red"
                >
                  <rect
                    className="c-vehicle-icon__label-background"
                    height={24}
                    rx={12}
                    ry={12}
                    width={64}
                    x={-32}
                    y={19}
                  />
                  <text
                    className="c-vehicle-icon__label c-vehicle-icon__label--normal"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="0"
                    y={31}
                  >
                    0123
                  </text>
                  <g
                    transform="scale(0.7) translate(-24,-23)"
                  >
                    <path
                      className="c-vehicle-icon__ghost-highlight"
                      d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                      strokeLinejoin="round"
                    />
                    <path
                      className="c-vehicle-icon__ghost-body"
                      d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                      strokeLinejoin="round"
                    />
                    <ellipse
                      className="c-vehicle-icon__ghost-eye"
                      cx="19.73"
                      cy="22.8"
                      rx="3.11"
                      ry="3.03"
                    />
                    <ellipse
                      className="c-vehicle-icon__ghost-eye"
                      cx="35.29"
                      cy="22.8"
                      rx="3.11"
                      ry="3.03"
                    />
                  </g>
                </g>
              </svg>
            </div>
          </div>
          <div
            className="c-card__left-content"
          >
            <div
              className="c-card__top-row"
            >
              <div
                className="c-card__title"
                id="card-label-:r5:"
              >
                <output
                  aria-label="Route Variant Name"
                  className="c-route-variant-name"
                >
                  <output
                    aria-label="Route & Variant"
                    className="c-route-variant-name__route-id"
                  >
                    1_
                  </output>
                  <span>
                     
                  </span>
                  <output
                    aria-label="Headsign"
                    className="c-route-variant-name__headsign"
                  >
                    headsign
                  </output>
                </output>
              </div>
            </div>
            <div
              className="c-card__contents"
            >
              <div
                className="c-properties-list"
              >
                <table
                  className="c-properties-list__table"
                >
                  <tbody>
                    <tr
                      className="c-properties-list__property "
                    >
                      <td
                        className="c-properties-list__property-label"
                      >
                        Run
                      </td>
                      <td
                        className="c-properties-list__property-value"
                      >
                        123-0123
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </button>
      </div>
    </li>
    <li>
      <div
        aria-current={true}
        aria-labelledby="card-label-:r6:"
        className="c-card c-card--white c-search-results__result c-card--inactive c-card--selected"
      >
        <button
          className="c-card__left"
          onClick={[Function]}
        >
          <div
            className="c-card__icon"
          >
            <div>
              <svg
                role="img"
                style={
                  {
                    "height": 64,
                    "width": 64,
                  }
                }
                viewBox="-32 -20 64 64"
              >
                <title>
                  Vehicle Status Icon
                </title>
                <g
                  className="c-vehicle-icon c-vehicle-icon--large on-time early-red"
                >
                  <rect
                    className="c-vehicle-icon__label-background"
                    height={24}
                    rx={12}
                    ry={12}
                    width={64}
                    x={-32}
                    y={19}
                  />
                  <text
                    className="c-vehicle-icon__label c-vehicle-icon__label--normal"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="0"
                    y={31}
                  >
                    1
                  </text>
                  <path
                    className="c-vehicle-icon__triangle"
                    d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
                    data-testid="vehicle-triangle"
                    transform="scale(1) rotate(0) translate(-24,-22)"
                  />
                  <text
                    className="c-vehicle-icon__variant"
                    dominantBaseline="alphabetic"
                    textAnchor="middle"
                    x={0}
                    y={14}
                  >
                    X
                  </text>
                </g>
              </svg>
            </div>
          </div>
          <div
            className="c-card__left-content"
          >
            <div
              className="c-card__top-row"
            >
              <div
                className="c-card__title"
                id="card-label-:r6:"
              >
                <output
                  aria-label="Route Variant Name"
                  className="c-route-variant-name"
                >
                  <output
                    aria-label="Route & Variant"
                    className="c-route-variant-name__route-id"
                  >
                    39_X
                  </output>
                  <span>
                     
                  </span>
                  <output
                    aria-label="Headsign"
                    className="c-route-variant-name__headsign"
                  >
                    Forest Hills
                  </output>
                </output>
              </div>
            </div>
            <div
              className="c-card__contents"
            >
              <div
                className="c-properties-list"
              >
                <table
                  className="c-properties-list__table"
                >
                  <tbody>
                    <tr
                      className="c-properties-list__property "
                    >
                      <td
                        className="c-properties-list__property-label"
                      >
                        Run
                      </td>
                      <td
                        className="c-properties-list__property-value"
                      >
                        run-1
                      </td>
                    </tr>
                    <tr
                      className="c-properties-list__property "
                    >
                      <td
                        className="c-properties-list__property-label"
                      >
                        Vehicle
                      </td>
                      <td
                        className="c-properties-list__property-value"
                      >
                        v1-label
                      </td>
                    </tr>
                    <tr
                      className="c-properties-list__property c-properties-list__property--operator fs-mask"
                    >
                      <td
                        className="c-properties-list__property-label"
                      >
                        Operator
                      </td>
                      <td
                        className="c-properties-list__property-value"
                      >
                        SMITH #op1
                      </td>
                    </tr>
                    <tr
                      className="c-properties-list__property c-properties-list__property--last-login"
                    >
                      <td
                        className="c-properties-list__property-label"
                      >
                        Last Login
                      </td>
                      <td
                        className="c-properties-list__property-value"
                      >
                        4 hr 3 min; 1:38 PM
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;
